--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,8 @@ dependencies:
   geolocator: ^6.1.13
   font_awesome_flutter: ^8.8.1
   smooth_star_rating: ^1.1.1
+  cached_network_image: ^3.0.0
+  flutter_custom_clippers: ^1.1.2
   
 dev_dependencies:
   flutter_test:
