--- a/mobile/lib/flutter_cool_alert-master/example/pubspec.yaml
+++ b/mobile/lib/flutter_cool_alert-master/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: pfe
-description: A new Flutter project.
+name: cool_alert_example
+description: A cool alert package usuage example app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,35 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-   
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_auth:
-  google_sign_in:
-  camera:
-  validate:
-  http:
-  shared_preferences:
-  flutter_map:
-  flutter_rating_bar:
-  geolocator: ^6.1.13
-  font_awesome_flutter: ^8.8.1
-  smooth_star_rating: ^1.1.1
-  cached_network_image: ^3.0.0
-  flutter_custom_clippers: ^1.1.2
-  flutter_rounded_date_picker:
-  flare_flutter: ^3.0.0
-  vector_math: ^2.0.8
-  lottie:
-  cool_alert: ^1.1.0
+  cool_alert:
+    path: ../
+  cupertino_icons: ^0.1.3
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +34,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -62,17 +41,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
-    - assets/icons/
-    # An image asset can refer to one or more resolution-specific "variants", see
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
+  # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
