[Web] Register page

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -40,14 +40,10 @@ dependencies:
   geolocator: ^6.1.13
   font_awesome_flutter: ^8.8.1
   smooth_star_rating: ^1.1.1
-  cached_network_image: ^3.0.0
   flutter_custom_clippers: ^1.1.2
   flutter_rounded_date_picker:
-  flare_flutter: ^3.0.0
-  vector_math: ^2.0.8
-  lottie:
-  cool_alert: ^1.1.0
-
+  flutter_beautiful_popup:
+  image: ^2.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
