--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "multer": "^1.4.2",
+    "path": "^0.12.7",
+    "uuidv4": "^6.2.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
